gui/UIManagerDefaults: Fix Java9+ deprecation for new Integer.