@@ -685,7 +685,7 @@ public class UIManagerDefaults implements ActionListener, ItemListener {
         public ExitAction() {
             putValue(Action.NAME, "Exit");
             putValue(Action.SHORT_DESCRIPTION, getValue(Action.NAME));
-            putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_X));
+            putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_X));
         }
 
         public void actionPerformed(ActionEvent e) {
